Quorum3/Library/Tests/Expressions/Fail/NoVariable.quorum
text msg = "Welcome to " + dna
output msg